Added password reset and new account activation token

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -146,7 +146,7 @@
                       <span class="dot"></span> Remember Me
                     </label>
                   </div>
-                  <a href="#">Forget Password?</a>
+                  <a href="/password_reset">Forget Password?</a>
                 </div>
 
                 <button class="button primary-bg btn-block">Login</button>
