--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -53,7 +53,7 @@
                 <a href="/"><img src={% static "images/concordia-logo.png" %} alt=""></a>
               </div>
               <div class="top-nav">
-                <a href="login.html" class="account-page-link">Login</a>
+                <a href="/login" class="account-page-link">Login</a>
               </div>
             </div>
           </div>
