--- a/web/templates/employer-details.html
+++ b/web/templates/employer-details.html
@@ -8,32 +8,32 @@
     <title>Oficiona</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href={% static  "assets/css/bootstrap.min.css" %}>
 
     <!-- External Css -->
-    <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/themify-icons.css" />
-    <link rel="stylesheet" href="assets/css/et-line.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap-select.min.css" />
-    <link rel="stylesheet" href="assets/css/plyr.css" />
-    <link rel="stylesheet" href="assets/css/flag.css" />
-    <link rel="stylesheet" href="assets/css/slick.css" /> 
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="assets/css/jquery.nstSlider.min.css" />
+    <link rel="stylesheet" href={% static  "assets/css/fontawesome-all.min.css" %}>
+    <link rel="stylesheet" href={% static  "assets/css/themify-icons.css" %} />
+    <link rel="stylesheet" href={% static  "assets/css/et-line.css" %} />
+    <link rel="stylesheet" href={% static  "assets/css/bootstrap-select.min.css" %} />
+    <link rel="stylesheet" href={% static  "assets/css/plyr.css" %} />
+    <link rel="stylesheet" href={% static  "assets/css/flag.css" %} />
+    <link rel="stylesheet" href={% static  "assets/css/slick.css" %} /> 
+    <link rel="stylesheet" href={% static  "assets/css/owl.carousel.min.css" %} />
+    <link rel="stylesheet" href={% static  "assets/css/jquery.nstSlider.min.css" %} />
 
 
 
     <!-- Custom Css -->
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type={% static "text/css" href="css/main.css" %}>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600%7CRoboto:300i,400,500" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.png">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/icon-114x114.png">
+    <link rel="icon" href={% static "images/favicon.png" %}>
+    <link rel="apple-touch-icon" href={% static "images/apple-touch-icon.png" %}>
+    <link rel="apple-touch-icon" sizes="72x72" href={% static "images/icon-72x72.png" %}>
+    <link rel="apple-touch-icon" sizes="114x114" href={% static "images/icon-114x114.png" %}>
 
 
     <!--[if lt IE 9]>
@@ -126,13 +126,13 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                  <li class="menu-item active"><a title="Home" href="home-1.html">Home</a></li>
+                  <li class="menu-item active"><a title="Home" href="/">Home</a></li>
                   <li class="menu-item dropdown">
                     <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Jobs</a>
                     <ul  class="dropdown-menu">
                       <li class="menu-item"><a  href="job-listing.html">Job Listing</a></li>
                       <li class="menu-item"><a  href="job-listing-with-map.html">Job Listing With Map</a></li>
-                      <li class="menu-item"><a  href="job-details.html">Job Details</a></li>
+                      <li class="menu-item"><a  href="/job-details/<int:pk>">Job Details</a></li>
                       <!-- <li class="menu-item"><a  href="post-job.html">Post Job</a></li> -->
                     </ul>
                   </li>
@@ -141,7 +141,7 @@
                     <ul  class="dropdown-menu">
                       <li class="menu-item"><a  href="candidate.html">Candidate Listing</a></li>
                       <li class="menu-item"><a  href="candidate-details.html">Candidate Details</a></li>
-                      <li class="menu-item"><a  href="add-resume.html">Add Resume</a></li>
+                      <li class="menu-item"><a  href="/add-resume/{{job.id}}">Add Resume</a></li>
                     </ul>
                   </li>
                   <li class="menu-item dropdown">
@@ -149,18 +149,15 @@
                     <ul  class="dropdown-menu">
                       <li class="menu-item"><a  href="employer-listing.html">Employer Listing</a></li>
                       <li class="menu-item"><a  href="employer-details.html">Employer Details</a></li>
-                      <li class="menu-item"><a  href="employer-dashboard-post-job.html">Post a Job</a></li>
                     </ul>
                   </li>
-                  <li class="menu-item dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Dashboard</a>
-                    <ul  class="dropdown-menu">
+                   <!--Candidate Dashboard -->
+                     {%if user.user_type == 1%}
                       <li class="menu-item dropdown">
-                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Candidate Dashboard</a>
+                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Dashboard</a>
                         <ul class="dropdown-menu">
-                          <li class="menu-item"><a  href="dashboard.html">Dashboard</a></li>
                           <li class="menu-item"><a  href="dashboard-edit-profile.html">Edit Profile</a></li>
-                          <li class="menu-item"><a  href="add-resume.html">Add Resume</a></li>
+                          <li class="menu-item"><a  href="/add-resume/{{job.id}}">Add Resume</a></li>
                           <li class="menu-item"><a  href="resume.html">Resume</a></li>
                           <li class="menu-item"><a  href="edit-resume.html">Edit Resume</a></li>
                           <li class="menu-item"><a  href="dashboard-bookmark.html">Bookmarked</a></li>
@@ -170,20 +167,58 @@
                           <li class="menu-item"><a  href="dashboard-alert.html">Alert</a></li>
                         </ul>
                       </li>
+                      {% endif %}
+
+                      <!--Employee Dashboard-->
+                      {% if user.user_type == 2 %}
+                      <li class="menu-item dropdown">
+                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Dashboard</a>
+                        <ul class="dropdown-menu">
+                          <li class="menu-item"><a href="employer-dashboard-edit-profile.html">Edit Profile</a></li>
+                          <li class="menu-item"><a href="employer-dashboard-manage-candidate.html">Manage Candidate</a></li>
+                          <li class="menu-item"><a href="/manageJobs">Manage Job</a></li>
+                          <li class="menu-item"><a href="employer-dashboard-message.html">Dashboard Message</a></li>
+                          <li class="menu-item"><a href="employer-dashboard-pricing.html">Dashboard Pricing</a></li>
+                        </ul>
+                      </li>
+                      {% endif %}
+
+                  <!-- Admin Dashboard-->
+                  {% if user.user_type == 3 or user.user_type == 4 %}
+                  <li class="menu-item dropdown">
+                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Dashboard</a>
+                        <ul class="dropdown-menu">
+
+                      <!-- Admin access to Candidate -->
+                        <li class="menu-item dropdown">
+                        <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Candidate Dashboard</a>
+                        <ul class="dropdown-menu">
+                          <li class="menu-item"><a  href="dashboard-edit-profile.html">Edit Profile</a></li>
+                          <li class="menu-item"><a  href="/add-resume/{{job.id}}">Add Resume</a></li>
+                          <li class="menu-item"><a  href="resume.html">Resume</a></li>
+                          <li class="menu-item"><a  href="edit-resume.html">Edit Resume</a></li>
+                          <li class="menu-item"><a  href="dashboard-bookmark.html">Bookmarked</a></li>
+                          <li class="menu-item"><a  href="dashboard-applied.html">Applied</a></li>
+                          <li class="menu-item"><a  href="dashboard-pricing.html">Pricing</a></li>
+                          <li class="menu-item"><a  href="dashboard-message.html">Message</a></li>
+                          <li class="menu-item"><a  href="dashboard-alert.html">Alert</a></li>
+                        </ul>
+                      </li>
+                      <!--Admin access to Employer -->
                       <li class="menu-item dropdown">
                         <a href="#" data-toggle="dropdown"  class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Employer Dashboard</a>
                         <ul class="dropdown-menu">
-                          <li class="menu-item"><a href="employer-dashboard.html">Employer Dashboard</a></li>
                           <li class="menu-item"><a href="employer-dashboard-edit-profile.html">Edit Profile</a></li>
                           <li class="menu-item"><a href="employer-dashboard-manage-candidate.html">Manage Candidate</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-manage-job.html">Manage Job</a></li>
+                          <li class="menu-item"><a href="/manageJobs">Manage Job</a></li>
                           <li class="menu-item"><a href="employer-dashboard-message.html">Dashboard Message</a></li>
                           <li class="menu-item"><a href="employer-dashboard-pricing.html">Dashboard Pricing</a></li>
-                          <li class="menu-item"><a href="employer-dashboard-post-job.html">Post Job</a></li>
                         </ul>
                       </li>
                     </ul>
                   </li>
+                  {% endif %}
+
                   <li class="menu-item dropdown">
                     <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Pages</a>
                     <ul  class="dropdown-menu">
@@ -203,13 +238,12 @@
                       <li class="menu-item"><a href="payment-complete.html">Payment Complete</a></li>
                       <li class="menu-item"><a href="invoice.html">Invoice</a></li>
                       <li class="menu-item"><a href="terms-and-condition.html">Terms And Condition</a></li>
-                      <li class="menu-item"><a href="404.html">404 Page</a></li>
-                      <li class="menu-item"><a href="login.html">Login</a></li>
-                      <li class="menu-item"><a href="register.html">Register</a></li>
                     </ul>
                   </li>
                   <li class="menu-item"><a href="contact.html">Contact Us</a></li>
-                  <li class="menu-item post-job"><a href="post-job.html"><i class="fas fa-plus"></i>Post a Job</a></li>
+                  {% if user.user_type == 2 or user.user_type == 3 or user.user_type == 4 %}
+                  <li class="menu-item post-job"><a href="/employer-dashboard-post-job"><i class="fas fa-plus"></i>Post a Job</a></li>
+                  {% endif %}
                 </ul>
               </div>
             </nav>
@@ -217,7 +251,6 @@
         </div>
       </div>
     </header>
-
     <!-- Company Details -->
     <div class="alice-bg padding-top-60 section-padding-bottom">
       <div class="container">
@@ -254,7 +287,7 @@
                       <h4><i data-feather="video"></i>Intro Video</h4>
                       <div class="video-area">
                         <!-- <div data-type="vimeo" data-video-id="126777001"></div> -->
-                        <div id="player" data-plyr-provider="vimeo" data-plyr-embed-id="126777001"></div>
+                        <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="https://www.youtube.com/watch?v=NwAxNFwEEbM"></div>
                       </div>
                     </div>
                     <div class="portfolio details-section">
@@ -429,9 +462,9 @@
                 <p>Add resume or post a job. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec.</p>
               </div>
               <div class="call-to-action-button">
-                <a href="add-resume.html" class="button">Add Resume</a>
+                <a href="/add-resume/{{job.id}}" class="button">Add Resume</a>
                 <span>Or</span>
-                <a href="post-job.html" class="button">Post A Job</a>
+                <a href="/employer-dashboard-post-job" class="button">Post A Job</a>
               </div>
             </div>
           </div>
@@ -487,7 +520,7 @@
                 <h4>Job Seekers</h4>
                 <div class="widget-inner">
                   <ul>
-                    <li><a href="#">Create Account</a></li>
+                    <li><a href="/register">Create Account</a></li>
                     <li><a href="#">Career Counseling</a></li>
                     <li><a href="#">My Oficiona</a></li>
                     <li><a href="#">FAQ</a></li>
@@ -501,9 +534,9 @@
                 <h4>Employers</h4>
                 <div class="widget-inner">
                   <ul>
-                    <li><a href="#">Create Account</a></li>
+                    <li><a href="/register">Create Account</a></li>
                     <li><a href="#">Products/Service</a></li>
-                    <li><a href="#">Post a Job</a></li>
+                    <li><a href="/employer-dashboard-post-job">Post a Job</a></li>
                     <li><a href="#">FAQ</a></li>
                   </ul>
                 </div>
@@ -558,27 +591,27 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/feather.min.js"></script>
-    <script src="assets/js/bootstrap-select.min.js"></script>
-    <script src="assets/js/jquery.nstSlider.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/visible.js"></script>
-    <script src="assets/js/jquery.countTo.js"></script>
-    <script src="assets/js/chart.js"></script>
-    <script src="assets/js/plyr.js"></script>
-    <script src="assets/js/tinymce.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/jquery.ajaxchimp.min.js"></script>
+    <script src={% static "assets/js/jquery.min.js" %}></script>
+    <script src={% static "assets/js/popper.min.js" %}></script>
+    <script src={% static "assets/js/bootstrap.min.js" %}></script>
+    <script src={% static "assets/js/feather.min.js" %}></script>
+    <script src={% static "assets/js/bootstrap-select.min.js" %}></script>
+    <script src={% static "assets/js/jquery.nstSlider.min.js" %}></script>
+    <script src={% static "assets/js/owl.carousel.min.js" %}></script>
+    <script src={% static "assets/js/visible.js" %}></script>
+    <script src={% static "assets/js/jquery.countTo.js" %}></script>
+    <script src={% static "assets/js/chart.js" %}></script>
+    <script src={% static "assets/js/plyr.js" %}></script>
+    <script src={% static "assets/js/tinymce.min.js" %}></script>
+    <script src={% static "assets/js/slick.min.js" %}></script>
+    <script src={% static "assets/js/jquery.ajaxchimp.min.js" %}></script>
 
-    <script src="js/custom.js"></script>
-    <script src="dashboard/js/dashboard.js"></script>
-    <script src="dashboard/js/datePicker.js"></script>
-    <script src="dashboard/js/upload-input.js"></script>
+    <script src={% static "js/custom.js" %}></script>
+    <script src={% static "dashboard/js/dashboard.js" %}></script>
+    <script src={% static "dashboard/js/datePicker.js" %}></script>
+    <script src={% static "dashboard/js/upload-input.js" %}></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC87gjXWLqrHuLKR0CTV5jNLdP4pEHMhmg"></script>
-    <script src="js/map.js"></script>
+    <script src={% static "js/map.js"> %}</script>
   </body>
 </html>
